# api_cuisine_elasticsearch_rust

./: Cargo.toml  README.md  dataSet.json  docker-compose.yml
api-cuisine/: Cargo.toml
api-cuisine/src/: main.rs
api-cuisine/src/database/: connection.rs  recette.rs  user.rs
api-cuisine/src/route/: test_route.rs
api-cuisine/src/test/: test.rs
src/: main.rs
src/database/: mod.rs
src/route/: test_route.rs
