[package]
name = "api-cuisine"
version = "0.1.0"
authors = ["Corentin Bellec"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
elasticsearch = "7.14.0-alpha.1"
serde = "1.0.136"
serde_json = "1.0.79"
openssl-sys = "0.9.72"
dotenv = "0.15.0"